# Fin-Amor-s-Ideal-UDP-FIUDP-CLI

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
benches/: crypto_overhead.rs  fec_overhead.rs  pipeline_throughput.rs
docs/benchmarks/: README.md
examples/: send_frame.rs
scripts/: plot_metrics.py
src/: config.rs  crypto.rs  error.rs  fec.rs  lib.rs  main.rs  protocol.rs  sender.rs  session.rs  types.rs
tests/: network_footprint.rs
